# SE3Kit

./: .gitignore  .pre-commit-config.yaml  API.md  README.md  ToDo  ToDo.md  pyproject.toml  requirements.txt  tests.py
.github/workflows/: codeql-analysis.yml  deploy_docs.yml  pre-commit-tests.yml  pypi-publish.yml  python-package.yml  tests.yml
docs/: conf.py  index.rst
se3kit/: __init__.py  degrees.py  hpoint.py  robot.py  ros_compat.py  rotation.py  tests.py  transformation.py  translation.py  utils.py
se3kit/calibration/: eye_in_hand_calibration.py  pivot_calibration.py
src/: tests.py
tests/: __init__.py  test_eye_in_hand_calibration.py  test_ros_compat.py  test_rotation.py  test_transformation.py  test_translation.py  test_utils.py
tests/eye_in_hand_test_poses/: camera_rotations.txt  camera_translations.txt  robot_rotations.txt  robot_translations.txt
