[project]
name = "se3kit"
description = "SE3 utilities and robot kinematics"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["se3", "robotics", "kinematics", "se3kit"]
authors = [ 
    {name = "Daniyal Maroufi", email = "daniyalmaroufi8@gmail.com"},
    {name = "Omid Rezayof", email = "omid.rezayof@utexas.edu"}
 ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Robotics",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/daniyalmaroufi/se3kit"

[build-system]
requires = ["setuptools", "setuptools-scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

# Runtime dependencies
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numpy-quaternion>=2023.11",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "ruff",
    "isort",
]


[tool.black]
line-length = 100
target-version = ["py311"]
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | tests/data
)/
'''

[tool.ruff]
target-version = "py311"
fixable = ["ALL"]

select = [
    "B",
    "C",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PL",
    "W",
]

ignore = [
    "ANN",
    "E501",
]

[tool.ruff.per-file-ignores]
"tests.py" = ["S101"]

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = [
    "se3kit",
]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 25
