[project]
name = "se3kit"
description = "3D rigid-body transformations and rotations"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["se3", "robotics", "rigid-body transformations", "se3kit"]
authors = [ 
    {name = "Daniyal Maroufi", email = "daniyalmaroufi8@gmail.com"},
    {name = "Omid Rezayof", email = "omid.rezayof@utexas.edu"}
 ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]

# Runtime dependencies
dependencies = [
    "numpy",
    "numpy-quaternion",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/se3kit/"
Documentation = "https://daniyalmaroufi.github.io/se3kit/"
Repository = "https://github.com/daniyalmaroufi/se3kit"

[build-system]
requires = ["setuptools", "setuptools-scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["se3kit"]

[tool.setuptools_scm]  # same as use_scm_version=True in setup.py

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "ruff",
    "isort",
    "sphinx",
    "sphinx_rtd_theme",
]

setup = [
    "build",
    "setuptools",
    "twine",
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | tests/data
)/
'''

[tool.ruff]
target-version = "py39"
fixable = ["ALL"]

select = [
    "B", # bugbear
    "C", # complexity
    "C4", # flake8-comprehensions
    "COM818", # Trailing comma on bare tuple prohibited
    "E", # pycodestyle
    "F", # pyflakes/autoflake
    "G", # flake8-logging-format
    "I", # isort
    "ISC001", # Implicitly concatenated string literals on one License
    "N",
    "PERF", # Perflint rules
    "PGH004", # Use specific rule codes when using noqa
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
    "PTH", # Use pathlib
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", #flake8-simplify
    "T100", # leftover breakpoint()
    "T20", # leftover print()
    "TRY004", # Prefer TypeError exception for invalid type
    "TRY200", # Use raise from to specify exception cause
    "TRY302", # Remove exception handler; error is immediately re-raised
    "PL", # pylint
    "UP", # pyupgrade
    "W", # pycodestyle
]

ignore = [
    "ANN", # flake8-annotations
    "E501", # line too long
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
]

[tool.ruff.per-file-ignores]
"tests.py" = ["S101"]

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = [
    "se3kit",
]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 25
